# SenseEngine

./: .dockerignore  .gitignore  Dockerfile.api  README.md  pyproject.toml  render.demo.yaml  render.yaml
.circleci/: config.yml
contracts/: demo-response.json  sense-engine-openapi.json
examples/: state_loop_demo.py
scripts/: export_demo_fixture.py  export_openapi.py  integration_smoke.sh  render_release.py  verify_restore_drill.sh
src/sense_engine/: __init__.py
tests/: __init__.py  helpers.py
tests/adapters/: test_computer_activity.py
tests/api/: __init__.py  conftest.py  test_app.py  test_demo_scenarios.py  test_demo_service.py  test_openapi_export.py  test_schemas.py
tests/core/: test_models.py  test_state_estimator.py
tests/deployment/: test_circleci_config.py  test_container_contract.py  test_integration_smoke.py  test_release_documentation.py  test_render_blueprint.py  test_render_demo_blueprint.py  test_render_release.py  test_restore_drill.py
tests/examples/: test_state_loop_demo.py
tests/memory/: test_state_memory.py
tests/policy/: test_intervention_policy.py
tests/repository/: test_web_workspace.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BrandMark.tsx  BreathingField.tsx  ContactForm.tsx  InsightCard.tsx  RichText.tsx  RoadmapTimeline.tsx  SectionHeading.tsx  SiteChrome.tsx  SiteFooter.tsx  SiteHeader.tsx  StateField.tsx  SubpageHero.tsx  (+1 more)
(+136 files in other folders)
