[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "sense-engine"
version = "0.1.0"
description = "Typed contract foundation for SenseEngine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1",
    "pydantic>=2.11,<3",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.16,<2",
    "pytest>=8.4,<9",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sense_engine"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["E501"]
